stylesheets/_component.footer.scss
.footer {
    -ms-transform: none;
    -webkit-backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    -webkit-transform: none;
    -webkit-transform: none;
    -webkit-transition: -webkit-transform 500ms ease;
    backface-visibility: hidden;
    background-color: color(white);
    border-top: 1px solid color(gray, lightest);
    bottom: 0;
    color: #999;
    font-size: $font-size-small;
    left: 0;
    padding: 6px $gutter-width;
    position: static;
    right: 0;
    transform: none;
    transition: transform 500ms ease;
    z-index: $zindex-footer;

    @include respond-min($screen-tablet) {
        position: fixed;
    }

    @include respond-min($screen-desktop) {
        left: $nav-primary-width;
    }

    .open-nav & {
        @include respond-min($screen-desktop) {
            left: $nav-primary-width;
            -webkit-transform: none;
            transform: none;
        }

        @include ie-lte(9) {
            left: $nav-primary-width;
        }
    }

    .open-help & {
        @include respond-min($screen-desktop) {
            left: $nav-primary-width;
            -webkit-transform: none;
            transform: none;
        }
    }

    a {
        color: color(gray, darker);
        line-height: 16px;
        padding: 0;
        text-decoration: none;

        &:hover {
            color: color(link);
        }
    }
}

.branding-footer {
    background: url($branding-footer-fallback);
    background: url($branding-footer), linear-gradient(transparent, transparent);
    background-size: $branding-footer-width 16px;
    background-position: 50%;
    background-repeat: no-repeat;
    height: 16px;
    margin-left: 15px;
    display: inline-block;
    text-indent: -9999px;
    width: $branding-footer-width;

    .lt-ie10 & {
        background-size: $branding-footer-width 16px;
    }
}

